base/media/tautulli/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tautulli
  namespace: media
  labels:
    app.kubernetes.io/name: tautulli
    app.kubernetes.io/part-of: homelab
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: tautulli
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8181
